testjob/pg-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pg
  labels:
    app.kubernetes.io/name: depl
    appkubernetes.io/component: pg
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: depl
      app.kubernetes.io/component: pg
  template:
    metadata:
      labels:
        app.kubernetes.io/name: depl
        app.kubernetes.io/component: pg
    spec:
      containers:
        - name: pg                          # Устанавливаем БД для web приложения
          image: postgres:15.1
          ports:
            - containerPort: 5432
              name: pg
