testjob/service.yaml
apiVersion: v1
kind: Service
metadata:
  name:
    labels:
      env: prod
      owner: adminevgvac
spec:
  type: LoadBalancer
  selector:
    project: cccp
